# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2015-01-26 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix macro name in cloudi_service_http_cowboy and cloudi_service_http_elli

2015-01-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Depend only on the https://github.com/CloudI/loadtests/ repository
      for loadtest results
    * Fix configure script so that it errors when perl, php, or node.js
      is not found when the programming language is enabled

2014-12-20 Michael Truog   <mjtruog [at] gmail (dot) com>

    * CloudI version 1.4.0 released

2014-12-16 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the loadtest results summary for 1.4.0

2014-12-15 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Added tsung_data.py script output for all loadtest results
    * Compressed all loadtest results together for better compression and
      easier handling within the git repository

2014-12-11 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the tsung_data.py script for getting exact latency extremes from
      tsung.log files

2014-12-06 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix Perl CloudI API destructor bug

2014-12-05 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix http_req C executable compilation
    * Tested with Fedora 20 on ppc64
      (configure command line arguments:
       --with-cxx-backtrace --with-zeromq --disable-javascript-support
       --disable-php-support --disable-ruby-support
       --with-integration-tests-ran=no)

2014-12-04 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Enforce TIMEOUT_TERMINATE_MIN based on MaxT setting during configuration
    * Add compatibility for FreeBSD 8.3 on amd64
      (relied on the default install except for extra source code
       compilation dependencies,
       ports used:
       devel/{autoconf,automake,libtool,git,boost-libs}
       math/gmp misc/e2fsprogs-libuuid