@@ -1,6 +1,11 @@
 # -*- coding: utf-8; tab-width: 4; -*-
 # ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:
 
+2015-01-28 Michael Truog   <mjtruog [at] gmail (dot) com>
+
+    * Add cloudi_service:suffix/2 and cloudi_service_name:suffix/2 for
+      simpler access to the suffix of a service name or service name pattern
+
 2015-01-26 Michael Truog   <mjtruog [at] gmail (dot) com>
 
     * Fix macro name in cloudi_service_http_cowboy and cloudi_service_http_elli
